--- a/com.sevenrmartsupermarket/test-output/index.html
+++ b/com.sevenrmartsupermarket/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Amala Chellappan\AppData\Local\Temp\testng-eclipse-1305864854\testng-customsuite.xml</span>
+                    <span>C:\Users\Amala Chellappan\AppData\Local\Temp\testng-eclipse--1511252905\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.sevenrmartsupermarket.tests.ManagePagesTest" class="method navigator-link" hash-for-method="newPage(Amala Page1, Description 123, Amala entered Page1)">newPage(Amala Page1, Description 123, Amala entered Page1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.sevenrmartsupermarket.tests.ManagePagesTest" class="method navigator-link" hash-for-method="searchTitle">searchTitle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,10 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="newPage(Amala Page1, Description 123, Amala entered Page1)">
-                  </a> <!-- newPage(Amala Page1, Description 123, Amala entered Page1) -->
-                  <span class="method-name">newPage</span>
-                  <span class="parameters">(Amala Page1,Description 123,Amala entered Page1)</span>
+                  <a name="searchTitle">
+                  </a> <!-- searchTitle -->
+                  <span class="method-name">searchTitle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Amala Chellappan\AppData\Local\Temp\testng-eclipse-1305864854\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Amala Chellappan\AppData\Local\Temp\testng-eclipse--1511252905\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.sevenrmartsupermarket.tests.ManagePagesTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;newPage&quot;/&gt;
+          &lt;include name=&quot;searchTitle&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.sevenrmartsupermarket.tests.ManagePagesTest --&gt;
     &lt;/classes&gt;
@@ -192,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'newPage')
+data.setCell(0, 1, 'searchTitle')
 data.setCell(0, 2, 'com.sevenrmartsupermarket.tests.ManagePagesTest')
-data.setCell(0, 3, 2239);
+data.setCell(0, 3, 1522);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,9 +219,9 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.sevenrmartsupermarket.tests.ManagePagesTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">searchTitle</span>
+                <span class="ignored-method-name">newPage</span>
                 <br/>
-                <span class="ignored-method-name">navigate</span>
+                <span class="ignored-method-name">deletePage</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -240,12 +239,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">newPage(Amala Page1, Description 123, Amala entered Page1)</span>
-                <span class="method-start">2893 ms</span>
+                <span class="method-name">searchTitle</span>
+                <span class="method-start">3290 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">terminateBrowser([TestResult name=newPage status=SUCCESS method=ManagePagesTest.newPage(java.lang.String,java.lang.St...)</span>
-                <span class="method-start">5134 ms</span>
+                <span class="method-name">terminateBrowser([TestResult name=searchTitle status=SUCCESS method=ManagePagesTest.searchTitle()[pri:0, instance:com...)</span>
+                <span class="method-start">4815 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
